added 5 day forcast and created function to add to localstorage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <!-- div for city search history -->
-            <div class="card">
+            <div id="search-history" class="card">
                 <h2>This is where city history goes</h2>
             </div>
         </div>
